--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/TaqwaR/bamazon#readme",
   "dependencies": {
+    "console.table": "^0.10.0",
     "dotenv": "^5.0.0",
     "inquirer": "^5.1.0",
     "mysql": "^2.15.0"
