--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "Amazon",
     "SQL"
   ],
-  "author": "Taqwa Rushdan",
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/TaqwaR/bamazon/issues"
